--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -159,9 +159,30 @@ font-family: 'Roboto', sans-serif;
     transform: scale(0.95);
   }
   
-  input[type=text] {
+  input[type=phone] {
     background-color: #f6f6f6;
-    border: none;
+    border: 1px solid #cccccc !important;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+  }
+
+  input[type=text] {
+    /* background-color: #f6f6f6; */
+    border: 1px solid #cccccc !important;
     color: #0d0d0d;
     padding: 15px 32px;
     text-align: center;
@@ -191,7 +212,7 @@ font-family: 'Roboto', sans-serif;
   
   input[type=password] {
     background-color: #f6f6f6;
-    border: none;
+    border: 1px solid #cccccc !important ;
     color: #0d0d0d;
     padding: 15px 32px;
     text-align: center;
@@ -333,4 +354,10 @@ font-family: 'Roboto', sans-serif;
   
   #icon {
     width:60%;
+  }
+
+.filter-option{
+   
+    border-color: #ced4da;
+
   }
